syntax = "proto3";

package user;

service UserService {
    rpc GetUser (UserId) returns (User);
    rpc CreateUser (User) returns (UserId);
}

message UserId {
    int32 id = 1;
}

message User {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
}